add spring demo for jdk24